# mnist_activelearning

./: .gitignore  README.md  active_learning.ipynb  alldata_train.py  app.py  confusion_matrix.py  dataset.py  git_setup.ipynb  logger.py  main.py  main_wandb_1st_step.py  model.py  pyproject.toml  run_dashbord.py  sampling.py  streamlit.py  train.py  umap_parallel.py  visualize.py  visualize_streamlit.py
dataset_cartography/: cartography_metrics.py  cartography_plot.py  cartography_plot_img.py  indexed_dataset.py  main.py
output_1/: annotated_data_log.csv  annotated_data_log_continue.csv  annotated_data_log_reset.csv  confusion_matrix_detailed_predictions_log_continue_cycle1.csv  confusion_matrix_detailed_predictions_log_continue_cycle2.csv  confusion_matrix_detailed_predictions_log_continue_cycle3.csv  confusion_matrix_detailed_predictions_log_continue_cycle4.csv  confusion_matrix_detailed_predictions_log_continue_cycle5.csv  confusion_matrix_detailed_predictions_log_reset_cycle1.csv  confusion_matrix_detailed_predictions_log_reset_cycle2.csv  confusion_matrix_detailed_predictions_log_reset_cycle3.csv  confusion_matrix_detailed_predictions_log_reset_cycle4.csv  confusion_matrix_detailed_predictions_log_reset_cycle5.csv
output_2/: annotated_data_log_continue.csv  annotated_data_log_reset.csv
output_3/: annotated_data_log_continue.csv  annotated_data_log_reset.csv
